api/src/main/java/com/example/api/error/exception/ExceptionMessage.java
package com.example.api.error.exception;

public class ExceptionMessage {
    public static final String EMAIL_TAKEN = "Podany adres email jest zajęty";
    public static final String INDEX_TAKEN = "Podany numer indeksu jest zajęty";
    public static final String GROUP_CODE_NOT_EXIST = "Podany kod grupy nie istnieje";
    public static final String GROUP_NAME_TAKEN = "Podana nazwa grupy jest zajęta";
    public static final String GROUP_CODE_TAKEN = "Podany kod grupy jest zajęty";
}
